# vapi-rental

./: .gitignore  README.md  main.py  propertyManagmentFlow.md  pyproject.toml  rental_lookup_proxy.py  rental_lookup_tool.json  requirments.txt  tools.py
.cursor/rules/: vapi-tool-best-practices.mdc
DEV_MAN/: README.md  push_rental_lookup_tool.sh  whatsWorking.md
